# fastapicrud

./: .gitignore  fastapicrud.code-workspace
crud_todo/: database.py  main.py
frontend/: .gitignore  package-lock.json  readme.md
frontend/ShopWorks/: README.md  package-lock.json  package.json
frontend/ShopWorks/src/: App.vue
frontend/ShopWorks/src/components/: TabulatorComp.vue
middleware/: fastapidb.db  pyproject.toml  requirements.txt
middleware/src/: database.py  fastapidb.db  main.py  models.py  nonpytesttest.py  schemas.py
middleware/tests/: test_fastapiput.py
